<resources>

    <!-- app name -->
    <string name="app_name">Cat Fact</string>


    <!-- fragment_home.xml -->
    <string name="fragment_home_no_internet_connection">No internet connection</string>

    <!-- fragment_settings.xml -->
    <string name="fragment_settings_credits">Credits</string>
    <string name="fragment_settings_about">About Cat Fact app</string>
    <string name="fragment_settings_licences">Open source licenses</string>
    <string name="fragment_settings_version">Version - %1$s</string>

    <!-- fragment_about.xml -->
    <string name="fragment_about_info">
        This is an open source app
        created by
        <a href="https://github.com/Abhimanyu14">Abhimanyu</a>
        and hosted in
        <a href="https://github.com/Abhimanyu14/cat-fact">GitHub</a>
    </string>

    <!-- fragment_credits.xml -->
    <string name="fragment_credits_heading_api">API</string>
    <string name="fragment_credits_heading_images">Images</string>
    <string name="fragment_credits_api">
        Creators of the API <a href="https://catfact.ninja/fact">https://catfact.ninja/fact</a>
    </string>
    <string name="fragment_credits_app_logo">
        Photo by
        <a href="https://www.pexels.com/@alex-andrews-271121?utm_content=attributionCopyText&amp;utm_medium=referral&amp;utm_source=pexels">
            Alex Andrews
        </a>
        from
        <a href="https://www.pexels.com/photo/selective-focus-photography-of-cat-821736/?utm_content=attributionCopyText&amp;utm_medium=referral&amp;utm_source=pexels">
            Pexels
        </a>
    </string>
    <string name="fragment_credits_no_internet_connection">
        Image by
        <a href="https://pixabay.com/users/io-images-1096650/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3471739">
            IO-Images
        </a>
        from
        <a href="https://pixabay.com/?utm_source=link-attribution&amp;utm_medium=referral&amp;utm_campaign=image&amp;utm_content=3471739">
            Pixabay
        </a>
    </string>
    <string name="fragment_credits_content_description_no_internet">No internet image</string>
    <string name="fragment_credits_content_description_app_logo">App logo</string>


    <!-- recyclerview_item_layout.xml -->
    <string name="recyclerview_item_layout_tools_text_fact">
        Cats don\'t have sweat glands over their bodies like humans do.
        Instead they sweat only through their paws.
    </string>
    <string name="recyclerview_item_layout_fact">%1$s. %2$s</string>

    <!-- recyclerview_loading_state_layout.xml -->
    <string name="recyclerview_loading_state_layout_error">Error in fetching data</string>
    <string name="recyclerview_loading_state_layout_retry">Retry</string>


    <!-- menu_appbar.xml -->
    <string name="action_settings">Settings</string>

</resources>
