<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_credits_root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.credits.CreditsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fragment_credits_textview_heading_api"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp"
                android:text="@string/fragment_credits_heading_api"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fragment_credits_textview_api"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:text="@string/fragment_credits_api"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:background="@color/lightGrey" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fragment_credits_textview_heading_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingTop="16dp"
                android:text="@string/fragment_credits_heading_images"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/fragment_credits_imageview_app_logo"
                android:layout_width="156dp"
                android:layout_height="156dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/fragment_credits_content_description_app_logo"
                app:imageSrc="@{@drawable/ic_no_internet}"
                tools:src="@drawable/ic_no_internet" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fragment_credits_textview_app_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingTop="8dp"
                android:text="@string/fragment_credits_app_logo"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/fragment_credits_imageview_no_internet"
                android:layout_width="match_parent"
                android:layout_height="256dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/fragment_credits_content_description_no_internet"
                app:imageSrc="@{@drawable/cat}"
                tools:src="@drawable/cat" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fragment_credits_textview_no_internet_connection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:text="@string/fragment_credits_no_internet_connection"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:background="@color/lightGrey" />

        </LinearLayout>

    </ScrollView>

</layout>
