<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/fragment_settings_root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.settings.SettingsFragment">

        <LinearLayout
            android:id="@+id/fragment_settings_linear_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fragment_settings_textview_credits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/fragment_settings_credits"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fragment_settings_textview_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/fragment_settings_about"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/fragment_settings_textview_licences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/fragment_settings_licences"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/fragment_settings_textview_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_settings_linear_layout"
            app:layout_constraintVertical_bias="1"
            tools:text="Version - 1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
